test/good/automatic/base/without_input/ret_nonzero/0003.lat

int main() {
  /* komentarz dziala */ ;
  // komentarz dziala ;
  # komentarz dziala ;
  return 2147483647;;;;;
}
