test/bad/automatic/base/compile_time/0053.lat
int andrzej(int return) {
  return return;
}

int main() {
  return andrzej(2);
}
